--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,6 +40,7 @@ body {
     padding: 0 !important;
     background: #fff;
     color: #666666;
+    font-family: 'Roboto Slab', serif;
 }
 
 a,
@@ -67,43 +68,90 @@ input {
 }
 
 /****BOX SIDE RIGHT open****/
-.box-sidebar-right {
-    display: block;
-    position: fixed;
-    right: 0;
-    top: 18%;
-    z-index: 99999;
-    background-color: #fff;
-    width: 52px;
-    height: 187px;
-    -webkit-box-shadow: -2.853px 0.927px 6px 0px rgba(129, 129, 129, 0.35);
-    -moz-box-shadow: -2.853px 0.927px 6px 0px rgba(129, 129, 129, 0.35);
-    box-shadow: -2.853px 0.927px 6px 0px rgba(88, 88, 88, 0.35);
+.popup-select-rooms {
+  display: block;
+z-index: 99;
+position: absolute;
+margin: 0 auto;
+width: 100%;
+text-align: center;
+margin-top:220px;
 }
 
 
 
-.box-sidebar-right ul li:first-child {
-    text-align: center;
-    background-color: #cf1e26;
+.popup-select-rooms .title-popups {
+  background-color: #000;
+      padding: 5px 10px;
+      display: table;
+      text-align: center;
 }
-
-.box-sidebar-right ul li {
-    text-align: center;
-    margin-bottom: 5px;
-    border-bottom: 1px solid #ececec;
-    padding: 9px 0px;
+.popup-select-rooms .title-popups h3{
+  font-size: 14px;
+  color: #fff;
+  margin: 10px;
 }
-
-.box-sidebar-right ul li:last-child {
-    border-bottom: inherit;
+.popup-select-rooms .frame-select-rooms{
+  background-color: #fff;
+  padding:12px;
+  text-align: center;
+  margin: 0 auto;
+  float: left;
+  width: 100%;
 }
+.in-popup{
+  width: 80%;
+  margin:0 auto;
+}
+.whyleft{
+  padding:0px;
+}
+.datestart label, .dateend label{
+  float:left;
+  padding:10px 0px;
+}
+.whyleft .btn-booking{
+  background-color: #d49100;
+  color: #fff;
+  display: table;
+  padding: 7px 15px;
+  font-size: 14px;
+  margin-top: 46px;
+  transition: background-color 0.5s ease;©
+}
+.whyleft .btn-booking:hover{
+  background-color: #000000;
+}
+.whyselect{
+  padding-left: 0px;
+}
+.whyright{
+  padding:0px;
+  border-left: 1px solid #ececec;
+padding-left: 12px;
+}
+.whyright h5{
+  color:#474747;
 
+}
+.whyright ul li{
+  font-size: 12px;
+  text-align: left;
+  padding:4px 0px;
+}
+.whyright ul li .fa-check-circle{
+  padding-right:6px;
+}
 .ic-social .fa-youtube-play {
     font-size: 30px;
     color: #fff;
 }
-
+.box-features{
+  background-color: #000;
+}
+.box-features .in-right .title{
+  color:#fff;
+}
 .ic-social .fa-facebook,
 .ic-social .fa-slideshare,
 .ic-social .fa-linkedin {
@@ -139,12 +187,27 @@ height: auto;
 z-index: 1;
 
 }
-.nav-top{
-  background: url('../images/bg-shadow.png') repeat-x center center
+.slide{
+  margin-top:78px;
 }
-.nav-top2{
-  padding-bottom: 10px;
-  border-bottom: 1px solid #ececec;
+.navigation-home ul li:hover a{
+  color: #d49101;
+border-bottom: 1px solid #d49101;
+padding-bottom: 9px;
+}
+.top-logo{
+  position: relative;
+}
+.top-logo .ic-topbar-white{
+  position: absolute;
+}
+.top-logo .ic-topbar-white .header-logo{
+  position: relative;
+  top: -72px;
+}
+.nav-top{
+  background-color: #000000;
+  padding-top:30px;
 }
 .nav-top .btn-green-left,
 .nav-top2 .btn-green-left{
@@ -156,39 +219,41 @@ z-index: 1;
   border-radius: 5px;
 }
 .nav-home{
-  padding-top:37px;
+  padding-top: 0px;
+padding-bottom: 27px;
 }
-.nav-home .top-nav-home ul{
+
+.top-nav-home,
+.top-nav-home ul{
   float:right;
+}
+.top-nav-home  {
+  padding:10px 0px;
 }
 .navigation-home{
   padding-left:54px;
 }
-.nav-home .top-nav-home ul li,
+.top-nav-home ul li,
 .navigation-home ul li{
   float:left;
-  padding-right:22px;
+  padding-right: 31px;
 }
+
 .navigation-home ul li a{
-  font-size:14px;
-  color:#000;
-  font-weight: 500;
-  text-transform: uppercase;
-}
-.navigation-home ul li a{
-  font-size:14px;
-  font-weight: 500;
-  text-transform: uppercase;
+  font-size:13px;
+  color:#fff;
+  font-weight: 300;
+  transition: color  0.5s ease;
 }
 
 .navigation-home ul li a:hover,
 .navigation-home2 ul li a:hover{
-  font-weight: 500;
+  font-weight: 300;
 }
 .navigation-home ul .active a,
 .navigation-home2 ul .active a{
 
-  font-weight: 500;
+  font-weight: 300;
 }
 .navigation-home ul li a .fa,
 .navigation-home2 ul li a .fa{
@@ -202,8 +267,34 @@ z-index: 1;
   text-decoration: 9999;
 }
 
-
-
+.datestart .fa-calendar,
+.dateend .fa-calendar{
+  position: absolute;
+  bottom: 7px;
+  right: 23px;
+font-size: 19px;
+}
+.on-top-nav a{
+  font-size:13px;
+  color:#676767;
+}
+.model-intro .left{
+  text-align: center;
+  padding: 36px 105px 0px 92px;
+  font-size: 14px;
+}
+.model-intro .left p,
+.box-features .right .in-right p,
+.box-contact .in-contact p {
+  margin-top: 23px;
+  line-height: 26px;
+}
+.left .label, .label{
+  text-transform: uppercase;
+  letter-spacing: 10px;
+  color:#d49100;
+  font-family: 'Roboto', sans-serif;
+}
 .title-home{
   font-size: 16px;
   font-weight: 600;
@@ -240,458 +331,173 @@ z-index: 1;
 .ft-social ul li a{
   font-size: 18px;
 }
+.service-room{
+  background-color: #f2f4f5;
+}
+.model-services .text-services{
+  text-align: center;
+}
+.box-model{
+  padding-bottom: 50px;
+}
+.model-services{
+  padding: 54px 0px 120px 0px;
+}
+.model-services .list-rooms{
+  margin: 42px 0px;
+}
+.model-services .list-rooms .left{
+  padding-right:0px;
+  }
+.img-room-left a{
+  display: block;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+.img-room-left a img{
+  width: 100%;
+}
+.left .bg-white{
+  background-color: #fff;
+  padding-bottom: 40px;
+}
+.left .bg-white .content-room-letf{
+  padding: 20px 40px;
+}
+.content-room-letf h4{
+  font-size: 24px;
+  font-weight: 300;
+}
+.content-room-letf p{
+  font-size: 14px;
+  margin-top: 14px;
+}
+.single a{
+  width: 277px;
+height: 197px;
+overflow: hidden;
+display: block;
+}
+.single .content-single{
+  position: relative;
+
+}
+.single .content-single img{
+  width: 100%;
+}
+.single .content-single .text-in{
+  position: absolute;
+  left: 16px;
+  bottom: 4px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 300;
+}
+.box-features,
+.box-features .left{
+padding-left:0px;
+padding-right: 10px;
+}
+.box-features .left img{
+  width: 100%;
+}
+.box-features .right .in-right p{
+  font-size: 14px;
+}
+.box-features .right .in-right{
+  padding: 48px 110px 0px 37px;
+}
+.box-features .right .in-right .btn-features{
+  background-color: #d49100;
+color: #fff;
+display: table;
+padding: 12px 23px;
+font-size: 14px;
+margin-top: 29px;
+}
+.box-contact {
+  text-align: center;
+}
+.box-contact .in-contact{
+  padding: 120px 0px 28px 0px;
+}
+.room-single .single{
+  overflow: hidden;
+  padding: 18px 32px;
+}
 /****** HOME close ******/
 
 
-/****** About open ******/
-.in-box-about .in-cover{
-  overflow: hidden;
-}
-.in-box-about .in-cover img{
-  width: 100%;
-}
-.text-about .text-right{
-  text-align: justify;
-  margin-top: 20px;
-  line-height: 25px;
-  padding: 0px;
-}
-/****** About close ******/
+
 
 
 /****** Dealers open ******/
-.title-dealers, .title{
-  font-size: 26px;
-  border-bottom: 1px solid #ececec;
-  display: table;
-  padding-bottom: 14px;
-  margin-bottom: 12px;
-  font-weight: normal;
-}
-.list-dealer-left{
-  padding-left:0px;
-}
-.list-dealer-left ul li{
-  padding: 17px 5px;
-  border-bottom: 1px solid #cccccc;
-  padding-bottom: 13px;
-  border-left: 1px solid #cccccc;
-}
-.list-dealer-left ul li:hover,
-.list-dealer-left ul .active{
-  background:url("../images/arrow-right.png") no-repeat center right #f0f5fa;
-  border-left: 1px solid #f0f5fa;
-}
-.map-google .map-img{
-  text-align: center;
-  height: 400px;
-  overflow: hidden;
-}
-.map-google .map-img img{
-  width: 100%;
-
+.title{
+  font-size: 42px;
+  padding-bottom: 0px;
+  font-weight: 300;
+  line-height: 56px;
+  text-transform: uppercase;
+  color:#000000;
 }
 
-.list-dealer-left ul li a{
-  font-size: 16px;
-  color: #333333;
+
+
+/****** Footer open ******/
+.footer{
+  background-color: #08090b;
+  padding: 40px 0px;
+  margin-top: 80px;
+}
+.ft-logo .link-ft{
+  background: url("../images/logo-footer.png") no-repeat center center;
+  width: 178px;
+  height: 182px;
   display: block;
-  overflow: hidden;
-  width: 200px;
-  padding-left:10px;
 }
-.select-area{
-    margin-bottom: 40px;
+.ft-phone,
+.ft-add,
+.ft-ads{
+  color:#fff;
 }
-.select-area h4{
-  display: inline-block;
+.ft-add{
+  padding-right:76px;
 }
-.img-dealers{
-  width: 90%;
-  height: auto;
-  overflow: hidden;
-  margin: 55px auto;
-  margin-bottom: 10px;
-}
-.img-dealers img{
-  width: 100%;
-}
-.content-text{
-  background-color:#fff;
-  position: relative;
-  padding: 10px 30px;
-}
-.content-text p{
-  text-align: justify;
-  line-height: 24px;
-}
-.content-text a,.text-right .link{
-  display: block;
-  text-align: right;
-  text-decoration: underline;
-}
-.text-right .link{
-  padding:18px 31px;
-}
-.content-text h4{
-  font-weight: 600;
-  font-size: 24px;
-  color:#000;
-}
-.select-area select{
-  width: auto;
-  border: none;
-  background-color: #ececec;
-  padding: 20px 10px;
-  height: 40px;
-  outline: inherit;
-  margin: 0px 10px;
-}
-.map-dealers{
-  margin: 26px 0px;
-}
-.map-google{
-  margin:20px 0px;
-}
-.map-dealers span{
-  display: block;
-  font-weight: 600;
-}
-.text-team{
-  margin: 38px 0px;
-}
-.in-text-right{
-  padding:0px 31px;
-}
-.in-text-right ul li{
-  padding:0px;
-}
-.in-text-right ul li a{
-  width: 180px;
-  height: auto;
-  display: block;
-  overflow: hidden;
-  text-align: center;
-}
-.textteam-right{
-  padding-left:0px;
-}
-.in-text-right ul li a img{
-  width: 100%;
-}
-.in-text-right ul li h4{
-  color: #93654e;
-  font-size: 18px;
-  text-align: center;
-}
-.in-text-right ul li span{
+.ft-phone h3,
+.ft-add h3{
   font-size: 14px;
-  color: #000;
-  text-decoration: underline;
+  font-weight: 300;
 }
-/****** Dealers close ******/
-
-/****** Go Green open ******/
-.content-go-green{
-  margin-top:80px;
-}
-.content-gogreen{
-  top:0px;
-  margin-top:20px;
-}
-.img-gogreen{
-  padding: 0px 64px;
-  height: inherit;
-}
-.content-gogreen h4{
-  margin-top:0px;
-}
-/****** Go Green close ******/
-
-/****** Inspiration open ******/
-.img-spi img{
-  width: 100%;
-}
-.textspi-left .img-spi{
-  display: block;
-  overflow: hidden;
-  height: auto;
-  width: 484px;
-}
-.textspi-right .img-spi{
-  display: block;
-  overflow: hidden;
-  height: auto;
-  width: 483px;
-}
-.textspi-left,
-.textspi-right {
-  padding-right:35px;
-}
-.textspi-left .in-text-right,
-.textspi-right .in-text-right{
-  padding:10px 0px;
-  overflow: hidden;
-}
-.textspi-left p,
-.textspi-right p{
-  line-height: 25px;
-  font-size: 14px;
-  padding: 0px 9px;
-}
-.link-title-inspi .title-inspi{
-  display: block;
-  width: 78%;
-}
-.link-title-inspi .time-date{
-  width: 20%;
-  font-weight: 100;
-  font-size: 16px;
-  float: right;
-  margin-top: 26px;
-}
-.link-title-inspi .title-inspi, .link-title-inspi .time-date{
-  display: inline-block;
-}
-.content-inspi{
-  padding-left:0px;
-}
-.link-title-inspi{
-  color: #000;
-    font-size: 18px;
-    font-weight: 600;
-    display: block;
-background-color: #ececec;
-padding: 0px 9px;
-margin: 0px 0px 10px 0px;
-}
-/****** Inspiration close ******/
-
-/****** House Type open ******/
-.filter-house{
-  background-color:#f4f4f4;
-  padding: 17px 5px;
-}
-.filter-item .item{
-  height: 100px;
-}
-.filter-item .item h4{
-  margin-bottom: 0px;
-  font-size: 16px;
-}
-.filter-item .item ul li{
-  display: inline-block;
-  padding-right: 12px;
-}
-.filter-item .item ul{
-  padding-top:10px;
-}
-.filter-item .item ul li a{
-  color:#848484;
-  padding:5px 2px;
-  border:1px solid #f4f4f4;
-}
-
-.filter-item .item ul li a:hover{
-  border:1px solid #000;
-  padding:5px 2px;
-}
-.filter-item .padding-top{
-  padding:20px 0px;
-}
-.filter-item .item .inline{
-  display: inline-block;
-}
-.filter-item .item .inline + .inline{
-  margin-left:10px;
-}
-.filter-item .item .radio{
-  color:#999;
-  font-size:15px;
-  position:relative;
-}
-.filter-item .item .radio span{
-  position:relative;
-   padding-left:20px;
-}
-.filter-item .item .radio span:after{
-  content:'';
-  width:15px;
-  height:15px;
-  border:3px solid;
-  position:absolute;
-  left:0;
-  top:1px;
-  border-radius:100%;
-  -ms-border-radius:100%;
-  -moz-border-radius:100%;
-  -webkit-border-radius:100%;
-  box-sizing:border-box;
-  -ms-box-sizing:border-box;
-  -moz-box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-}
-.filter-item .item .radio input[type="radio"]{
-   cursor: pointer;
-  position:absolute;
-  width:100%;
-  height:100%;
-  z-index: 1;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"
-}
-.filter-item .item .radio input[type="radio"]:checked + span{
-  color:#000;
-}
-.filter-item .item .radio input[type="radio"]:checked + span:before{
-    content:'';
-  width:5px;
-  height:5px;
-  position:absolute;
-  background:#000;
-  left:5px;
-  top:6px;
-  border-radius:100%;
-  -ms-border-radius:100%;
-  -moz-border-radius:100%;
-  -webkit-border-radius:100%;
-}
-.filter-result{
-  margin-top:20px;
-}
-.filter-result .result-item{
-  margin-bottom:40px;
-  width: 350px;
-  overflow: hidden;
-  padding: 0px 17px;
-}
-.filter-result{
-  padding:0px;
-}
-.filter-result .result-item a.link-result-img img{
-  width: 100%;
-}
-.filter-result .result-item a.link-result-img,
-.filter-result .result-item a.link-result{
-  display: block;
-  height: auto;
-  overflow: hidden;
-}
-.filter-result .result-item a.link-result:hover,.filter-result .result-item:hover h4,
-.filter-result .result-item:hover span{
-  color:#afafaf;
-}
-.filter-result .result-item h4{
-  color:#000;
-  font-size: 18px;
-  font-weight: 600;
-  margin: 10px 0px;
-}
-.filter-result .result-item span{
-  font-size: 14px;
-  color:#000;
-}
-.filter-result .result-item .link-result{
-  padding: 11px;
-  background-color: #f1eff0;
-}
-.filter-result .result-item .link-result img{
-  width: 100%;
-}
-/****** House Type close ******/
-
-
-/****** House type detail open ******/
-.hs-detail{
-  padding: 0px 69px;
-}
-.hs-detail .cover{
-  overflow: hidden;
-}
-.hs-detail .cover span{
+.ft-add h3{
   line-height: 26px;
+}
+.ft-phone h4,
+.ft-add h4{
   font-size: 16px;
+line-height: 22px;
+font-weight: 300;
 }
-.hs-detail .cover img{
-  width: 100%;
+.ft-phone h4 span,
+.ft-add h4 span,
+.ft-ads h4 span{
+  color: #9c9c9c;
+  font-size: 12px;
+  margin-top:10px;
 }
-.hs-detail .cover h3{
-  text-align: center;
-  display: block;
-  background-color:#dbdbdb;
-  padding:10px 5px;
-  margin:0px 0px 20px 0px;
+.ft-ads form input{
+  margin-top:24px;
+  height: 36px;
+  padding-left:5px;
+  font-size: 12px;
 }
-.img-desc{
-  margin:45px 0px;
+.ft-ads form a{
+  background-color: #d49100;
+color: #fff;
+padding: 10px 16px 7px 16px;
+font-size: 14px;
+margin-left: -3px;
 }
-.img-desc .desc{
-  overflow: hidden;
-  text-align: center;
-}
-.img-desc .desc img{
-  width: 100%;
-  margin:0 auto;
-}
-.desc-item{
-  padding:20px 0px;
-}
-.desc-item .text-farkta{
-  text-align: center;
-  font-weight: bold;
-  padding:10px 0px;
-  margin-top:20px;
-}
-.item{
-  padding:0px 10px;
-}
-.item ul li{
-  border-bottom:1px solid #ececec;
-  padding: 4px 17px 4px 0px;
-}
-.item ul li .text-left{
-  text-align:left;
-}
-.item ul li .text-right{
-  float: right;
-  font-weight: bold;
-
-}
-.other-pj h4{
-  text-align: center;
-}
-.same-pj{
-  margin-top:20px;
-}
-.same-pj .title-housetype{
-  text-align: center;
-  font-weight: 600;
-  margin: 20px 0px 40px 0px;
-  font-size: 20px;
-}
-.item-pj a h4{
-  font-size: 16px;
-    font-weight: 600;
-    color: #000;
-    text-transform: uppercase;
-    background-color: #dbdbdb;
-    text-align: center;
-    padding: 14px 13px;
-    margin: 0px;
-}
-.item-pj a{
-  width: 192px;
-  height: auto;
-  overflow: hidden;
-  display: block;
-  margin: 0 auto;
-}
-.item-pj a img{
-  width: 100%;
-}
-/****** House type detail close ******/
-
 
 /** ElegantIcons **/
 @font-face {
