Update css select-rooms
Style css Select rooms.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -575,6 +575,112 @@ margin-top: 29px;
   border: 1px solid #ececec;
   color:#6f6f6f;
 }
+
+
+.form-item{
+	padding-top:20px;
+}
+.info-personal label,
+.info-payment label{
+	display: block;
+	font-size: 14px;
+	font-weight: 300;
+	padding:10px 0px;
+}
+.info-personal input,
+.info-payment input,
+.info-payment select{
+	width: 80%;
+	height: 35px;
+}
+.policy{
+	background-color: #f1f1f1;
+	margin:40px 0px;
+padding:20px 0px;
+text-align: center;}
+.in-policy h3{
+	color:#000;
+	margin:20px 0px;
+}
+.in-policy p,
+.in-policy label{
+	font-weight: 300;
+}
+.in-policy p a{
+	color:#d08500;
+}
+
+.btn-agree-booking .in-agree-booking{
+	text-align: center;
+	margin:0 auto;
+	margin-top: 19px;
+}
+.btn-agree-booking a{
+	background-color: #d08500;
+	color: #fff;
+	padding: 15px 40px;
+}
+/**CHECKBOX open**/
+.checkbox label:after,
+.radio label:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+.checkbox .cr,
+.radio .cr {
+    position: relative;
+    display: inline-block;
+    border: 1px solid #a9a9a9;
+    border-radius: .25em;
+    width: 1.3em;
+    height: 1.3em;
+    float: left;
+    margin-right: .5em;
+}
+
+.radio .cr {
+    border-radius: 50%;
+}
+
+.checkbox .cr .cr-icon,
+.radio .cr .cr-icon {
+    position: absolute;
+    font-size: .8em;
+    line-height: 0;
+    top: 50%;
+    left: 20%;
+}
+
+.radio .cr .cr-icon {
+    margin-left: 0.04em;
+}
+
+.checkbox label input[type="checkbox"],
+.radio label input[type="radio"] {
+    display: none;
+}
+
+.checkbox label input[type="checkbox"] + .cr > .cr-icon,
+.radio label input[type="radio"] + .cr > .cr-icon {
+    transform: scale(3) rotateZ(-20deg);
+    opacity: 0;
+    transition: all .3s ease-in;
+}
+
+.checkbox label input[type="checkbox"]:checked + .cr > .cr-icon,
+.radio label input[type="radio"]:checked + .cr > .cr-icon {
+    transform: scale(1) rotateZ(0deg);
+    opacity: 1;
+}
+
+.checkbox label input[type="checkbox"]:disabled + .cr,
+.radio label input[type="radio"]:disabled + .cr {
+    opacity: .5;
+}
+/**CHECKBOX close**/
+
 /****** Footer open ******/
 .footer{
   background-color: #08090b;
