--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,12 +3,30 @@
 @media(min-width: 992px) {
     /*.tab{width: 50% ;}*/
 
-
+.container-custom{
+}
+.menu-mobile,
+.menu-mobile2{
+  display: none;
+}
+.box-dashboard .container .in-box-dashboard .dashboard-left{
+  max-width: inherit;
+  width: 48%;
+  margin-right: 20px;
+}
+.box-dashboard .container .in-box-dashboard .dashboard-right{
+  margin-left: inherit;
+  max-width: inherit;
+  width: 48%;
+}
+}
 @media (min-width: 768px) and (max-width: 992px) {
-
-  .nav-top{
-    display: none !important;
+  .container-custom{
+    width: 768px;
   }
+.menu-mobile{
+  display: block;
+}
 .navbar-nav{
   float:right;
 }
@@ -96,7 +114,7 @@
 }
 
 }
-@media (min-width: 320px) and (max-width: 992px) {
+@media (min-width: 320px) and (max-width: 768px) {
     /*NAV BAR*/
     .open>.dropdown-menu {
     display: block !important;
