--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1250,6 +1250,9 @@ float: right;
     top: -2px;
     position: relative;
 }
+.dropdown-menu{
+	min-width: 108px;
+}
 
 /** ElegantIcons **/
 @font-face {
